Fix Hotel Detail Gallery

--- a/project/src/main/res/layout/gallery_image.xml
+++ b/project/src/main/res/layout/gallery_image.xml
@@ -3,6 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/gallery_item_image_view"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="@dimen/car_details_image_size"
         android:adjustViewBounds="true"
 		android:scaleType="fitCenter" />
