--- a/project/src/main/res/layout/widget_phone_launch_five_btn.xml
+++ b/project/src/main/res/layout/widget_phone_launch_five_btn.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:includeFontPadding="false"
         android:paddingBottom="5dp"
         android:singleLine="true"
         android:textColor="#FFFFFF"
