--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -246,7 +246,7 @@
                         <com.expedia.bookings.widget.TextView
                             android:id="@+id/strike_through_price"
                             android:layout_width="wrap_content"
-                            android:layout_height="2dp"
+                            android:layout_height="wrap_content"
                             android:alpha=".7"
                             android:paddingRight="4dp"
                             android:textColor="@color/hotel_cell_gray_text"
