5199. Hotel Checkout Image
Passing the hotel image to be used in checkout.

--- a/project/src/main/res/layout/hotel_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/hotel_checkout_summary_widget.xml
@@ -10,6 +10,7 @@
         android:minHeight="120dp">
 
         <ImageView
+            android:id="@+id/hotel_checkout_room_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/hotel_info_section"
