--- a/project/src/main/res/layout/widget_phone_launch.xml
+++ b/project/src/main/res/layout/widget_phone_launch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.PhoneLaunchWidget xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/phone_launch_widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/launch_list_bg"
@@ -45,5 +46,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:visibility="gone" />
+
+    <FrameLayout
+        android:id="@+id/launch_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/launch_list_bg">
+
+        <ProgressBar
+            style="@style/ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+    </FrameLayout>
 
 </com.expedia.bookings.widget.PhoneLaunchWidget>
