--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -34,6 +34,8 @@
     <color name="launch_lob_bg">#FFFFFF</color>
     <color name="launch_list_txt">#FFFFFF</color>
     <color name="launch_list_strikethrough_txt">#B2FFFFFF</color>
+    <color name="actionbar_tab_text_selected">#FFFFFF</color>
+    <color name="actionbar_tab_text_unselected">#8CFFFFFF</color>
 
     <!-- Itinerary colors -->
     <color name="itin_white_text">#F3F3F3</color>
