--- a/project/src/voyages/res/values/colors.xml
+++ b/project/src/voyages/res/values/colors.xml
@@ -17,4 +17,14 @@
 
     <color name="tablet_book_button_text_color">@color/action_bar_bg_color</color>
     <color name="tablet_price_expanded_bucket_text_color">@color/action_bar_bg_color</color>
+
+    <color name="launch_actionbar_bg_color">#EDEDED</color>
+    <color name="hotel_lob_btn">#70BB00</color>
+    <color name="lx_lob_btn">#A1006B</color>
+    <color name="flights_lob_btn">#0088CE</color>
+    <color name="action_bar_selected_tab_underline_color">#585858</color>
+    <color name="actionbar_tab_text_selected">#585858</color>
+    <color name="actionbar_tab_text_unselected">#8C585858</color>
+    <color name="launch_lob_bg">#E0DFDC</color>
+
 </resources>
