Custom Star rating bar for results, map carousel & details.
This can handle spacing between stars & color of the stars.
https://eiwork.mingle.thoughtworks.com/projects/eb_ad_app/cards/5073.

--- a/project/src/main/res/drawable/ratingbar_star_material_detail.xml
+++ b/project/src/main/res/drawable/ratingbar_star_material_detail.xml
@@ -9,6 +9,6 @@
         android:drawable="@android:color/transparent"/>
     <item
         android:id="@android:id/progress"
-        android:drawable="@drawable/star_details" />
+        android:drawable="@drawable/detail_star" />
 
 </layer-list>
