--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -111,13 +111,14 @@
                         android:gravity="bottom"
                         android:orientation="horizontal">
 
-                        <RatingBar
+                        <com.expedia.bookings.widget.StarRatingBar
                             android:id="@+id/hotel_rating_bar"
-                            style="@style/RatingBar.UserReview.Material.Yellow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:stepSize=".5" />
+                            app:star_spacing="4dp"
+                            app:star_color="#F1B906"
+                            app:star_drawable="@drawable/results_map_preview_star" />
 
                         <com.expedia.bookings.widget.TextView
                             android:id="@+id/hotel_amenity_or_distance_from_location"
