--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -705,13 +705,13 @@
                         android:textSize="18sp"
                         app:textStyle="medium" />
 
-                    <RatingBar
+                    <com.expedia.bookings.widget.StarRatingBar
                         android:id="@+id/hotel_star_rating_bar"
-                        style="@style/RatingBar.UserReview.Material.Detail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:numStars="5"
-                        android:stepSize=".5" />
+                        android:layout_width="200dp"
+                        android:layout_height="14dp"
+                        app:star_drawable="@drawable/detail_star"
+                        app:star_spacing="4dp"
+                        app:star_color="#F1B906" />
 
                 </LinearLayout>
 
