5229: Review polish and performance
- Don't kick off downloads until transition finishes to help transition
  performance.
- Hide views if the text is empty.

--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -51,7 +51,7 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
-    <com.expedia.bookings.presenter.hotel.HotelReviewsPresenter
+    <com.expedia.bookings.presenter.hotel.HotelReviewsView
         android:id="@+id/hotel_reviews_presenter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
