--- a/project/src/main/res/layout/hotel_review_row.xml
+++ b/project/src/main/res/layout/hotel_review_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/hotel_review_background_color">
 
     <LinearLayout
@@ -19,8 +19,7 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/hotel_review_padding_bottom">
+            android:layout_height="wrap_content" >
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/review_title"
@@ -32,28 +31,31 @@
                 android:textSize="@dimen/hotel_review_title"
                 app:textStyle="medium" />
 
+            <com.expedia.bookings.widget.BoxRatingBar
+                android:id="@+id/user_rating_bar"
+                android:layout_width="80dp"
+                android:layout_height="11dp"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/review_title"
+                android:layout_marginBottom="@dimen/hotel_review_padding_bottom"
+                android:layout_marginTop="5dp"
+                android:numStars="5"
+                android:stepSize=".5"
+                app:corner_radius="@dimen/hotel_review_corner_radius"
+                app:disabled_box_color="@color/rating_yellow_disabled"
+                app:divider_width="@dimen/hotel_review_divider_width"
+                app:enabled_box_color="@color/rating_yellow" />
+
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
                 android:layout_alignParentRight="true"
+                android:paddingLeft="5dp"
                 android:textColor="@color/hotel_review_date_color"
                 android:textSize="@dimen/hotel_review_date" />
 
         </RelativeLayout>
-
-        <com.expedia.bookings.widget.BoxRatingBar
-            android:id="@+id/user_rating_bar"
-            android:layout_width="80dp"
-            android:layout_height="11dp"
-            android:layout_marginBottom="@dimen/hotel_review_padding_bottom"
-            android:numStars="5"
-            android:stepSize=".5"
-            app:corner_radius="@dimen/hotel_review_corner_radius"
-            app:disabled_box_color="@color/rating_yellow_disabled"
-            app:divider_width="@dimen/hotel_review_divider_width"
-            app:enabled_box_color="@color/rating_yellow" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/content"
