s/5331 adding resort fee disclaimer checkouti

--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -92,6 +92,16 @@
                 android:paddingTop="16dp"
                 android:textSize="10sp" />
 
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/disclaimer_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingLeft="1.5dp"
+                android:paddingRight="1.5dp"
+                android:textSize="10sp"
+                android:visibility="gone" />
+
             <Space
                 android:id="@+id/spacer"
                 android:layout_width="match_parent"
