5269 - Prevent text overlapping with view room button on rooms container.

--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -39,7 +39,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
-                    android:layout_toLeftOf="@+id/price_container"
+                    android:layout_toLeftOf="@+id/view_room_button"
                     android:maxLines="2"
                     android:paddingRight="10dp"
                     android:textColor="#3C3C3C"
@@ -74,7 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/room_type_text_view"
-                    android:layout_toLeftOf="@+id/total_price_per_night"
+                    android:layout_toLeftOf="@+id/view_room_button"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="4dp"
                     android:drawableLeft="@drawable/room_bed"
