--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -173,7 +173,8 @@
                 android:layout_height="1px"
                 android:background="@color/hotel_detail_divider"
                 android:paddingBottom="12dp"
-                android:paddingTop="12dp" />
+                android:paddingTop="12dp"
+                android:visibility="gone"/>
 
             <RelativeLayout
                 android:id="@+id/room_info_container"
@@ -183,7 +184,8 @@
                 android:paddingBottom="12dp"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
-                android:paddingTop="12dp">
+                android:paddingTop="12dp"
+                android:visibility="gone">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/room_info_header_text"
