--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -187,21 +187,23 @@
         <item name="android:windowActionBarOverlay">true</item>
     </style>
 
-    <style name="TerminalMapActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:displayOptions">showHome|useLogo</item>
-        <item name="android:background">@drawable/bg_action_bar_vsc</item>
+    <!-- Account creation theme -->
+    <style name="Whitelabel.AccountLibTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="acct__input_text_error_color">@color/acct__bg_input_text_error_vsc</item>
+        <item name="acct__input_text_good_color">@color/acct__bg_input_text_good_vsc</item>
+        <item name="acct__sign_in_button_background_drawable">@drawable/btn_signin_vsc</item>
+        <item name="acct__sign_in_button_text_color">@color/acct__btn_sign_in_text_vsc</item>
+        <item name="acct__logo_small_drawable">@android:color/transparent</item>
+        <item name="acct__logo_large_drawable">@drawable/acct__logo_large_vsc</item>
+        <item name="acct__logo_text_drawable">@drawable/acct__logo_text_vsc</item>
+        <item name="acct__checkmark_good_drawable">@drawable/acct__ic_checkmark_vsc</item>
+        <item name="acct__checkmark_warning_drawable">@drawable/acct__ic_warning_vsc</item>
+        <item name="skin_accountCreationBackgroundDrawable">@drawable/acct_bg_vsc</item>
+        <item name="acct__create_account_prompt_string">@string/acct_Create_an_vsc_account</item>
+        <item name="acct__welcome_message_string">@string/acct_Welcome_to_vsc</item>
+        <item name="acct__account_already_exists_string">@string/acct_vsc_account_already_exists</item>
+        <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
+        <item name="acct__logo_text_drawable_margin_left">-36dp</item>
+        <item name="acct__logo_text_drawable_margin_top">5dp</item>
     </style>
-
-    <style name="TerminalMapTheme" parent="@android:style/Theme.Holo">
-        <item name="android:logo">@drawable/ic_logo_vsc</item>
-        <item name="android:actionBarStyle">@style/TerminalMapActionBar</item>
-        <item name="android:actionOverflowButtonStyle">@style/Widget.ActionBar.ActionButton.Overflow</item>
-        <item name="android:windowBackground">@android:color/white</item>
-
-        <!-- PopupMenu -->
-        <item name="android:dropDownListViewStyle">@android:style/Widget.Holo.Light.ListView.DropDown</item>
-        <item name="skin_terminalChooserTextColor">@color/itin_white_text</item>
-
-    </style>
-
 </resources>
