--- a/project/src/airAsiaGo/res/values-sw600dp/colors.xml
+++ b/project/src/airAsiaGo/res/values-sw600dp/colors.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="tablet_results_search_done">#608405</color>
-    <color name="tablet_results_calendar_dates">#E31F0E</color>
+    <color name="tablet_results_calendar_dates">@color/aag_primary_color</color>
     <color name="launch_pin_detail_button_text">#ffffff</color>
     <color name="hotel_room_rate_select_room_button">#e4822a</color>
     <color name="hotel_room_rate_select_room_button_pressed">#ab601f</color>
-    <color name="hotel_room_rate_add_room_button">#E31F0E</color>
+    <color name="hotel_room_rate_add_room_button">@color/aag_primary_color</color>
     <color name="hotel_room_rate_add_room_button_pressed">#C30A0E</color>
     <color name="tablet_hotel_selected_overlay">#B3E31F0E</color>
     <color name="tablet_hotel_pressed_overlay">#B3E31F0E</color>
-    <color name="tablet_calendar_cell_today_text">#E31F0E</color>
-    <color name="tablet_hotel_sort_filter_area_price">#E31E0D</color>
+    <color name="tablet_calendar_cell_today_text">@color/aag_primary_color</color>
+    <color name="tablet_hotel_sort_filter_area_price">@color/aag_primary_color</color>
     <color name="tablet_hotel_sort_filter_area_price_disabled">#FC8D83</color>
-    <color name="tablet_hotel_filter_count_ring_color">#E31F0E</color>
+    <color name="tablet_hotel_filter_count_ring_color">@color/aag_primary_color</color>
 
 </resources>
