--- a/project/src/main/res/values-sw600dp/colors.xml
+++ b/project/src/main/res/values-sw600dp/colors.xml
@@ -18,6 +18,7 @@
     <color name="details_ring_red">#bc4649</color>
     <color name="details_ring_blue">#286cb5</color>
     <color name="details_ring_gray">#cbcfd2</color>
+    <color name="hotel_details_user_rating_text">#1b5698</color>
     <color name="sliding_group_text_bright">#f4f5f7</color>
     <color name="sliding_group_text_dim">#4a4f54</color>
     <color name="tablet_results_search_blue">#3d6a99</color>
