--- a/project/src/voyages/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/voyages/res/values-sw600dp/tablet_themes.xml
@@ -4,7 +4,7 @@
         <item name="skin_action_bar_logo_tablet">@drawable/ic_logo_vsc</item>
         <item name="skin_actionbarTabletTitleColor">@color/actionbarTabletTitleColor</item>
         <item name="skin_collection_overlay_static_color">@color/collection_overlay_color</item>
-        <item name="skin_tablet_book_button_text_color">@color/tablet_book_button_text_color</item>
+        <item name="skin_tablet_book_button_text_color">@color/vsc_primary_color</item>
         <item name="skin_tablet_trip_bucket_arrow">@drawable/ic_book_bucket_arrow</item>
         <item name="skin_collection_placeholder">@drawable/bg_itin_placeholder</item>
         <item name="skin_tablet_hotel_room_rate_select_button">@drawable/tablet_hotel_room_select_button</item>
@@ -46,13 +46,13 @@
         <item name="skin_tablet_confirmation_phone_icon">@drawable/ic_tablet_confirmation_phone</item>
         <item name="skin_tablet_confirmation_share_icon">@drawable/ic_tablet_confirmation_share</item>
         <item name="skin_tablet_confirmation_action_color">@color/tablet_confirmation_action_color</item>
-        <item name="skin_tablet_price_expanded_bucket_text_color">@color/tablet_price_expanded_bucket_text_color</item>
+        <item name="skin_tablet_price_expanded_bucket_text_color">@color/vsc_primary_color</item>
         <item name="skin_tablet_checkout_price_breakdown_icon">@drawable/ic_tablet_checkout_price_breakdown</item>
 
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white</item>
 
-        <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view</item>
+        <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view_vsc</item>
         <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet</item>
         <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card</item>
         <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet</item>
